--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@adonisjs/core": "^5.0.4-preview-rc",
     "@adonisjs/lucid": "^9.0.3",
     "@adonisjs/repl": "^1.0.0",
+    "imagekit": "^3.1.1",
     "luxon": "^1.25.0",
     "pg": "^8.5.1",
     "phc-argon2": "^1.0.11",
