--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "devDependencies": {
     "@adonisjs/assembler": "^3.0.0",
+    "@types/lodash": "^4.14.165",
     "adonis-preset-ts": "^1.1.0",
     "pino-pretty": "^4.3.0",
     "typescript": "^4.1.2",
@@ -20,7 +21,9 @@
     "@adonisjs/core": "^5.0.4-preview-rc",
     "@adonisjs/lucid": "^9.0.3",
     "@adonisjs/repl": "^1.0.0",
+    "geolib": "^3.3.1",
     "imagekit": "^3.1.1",
+    "lodash": "^4.17.20",
     "luxon": "^1.25.0",
     "pg": "^8.5.1",
     "phc-argon2": "^1.0.11",
