--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "@adonisjs/assembler": "^3.0.0",
     "@types/lodash": "^4.14.165",
+    "@types/socket.io": "^2.1.11",
     "adonis-preset-ts": "^1.1.0",
     "pino-pretty": "^4.3.0",
     "typescript": "^4.1.2",
@@ -21,6 +22,7 @@
     "@adonisjs/core": "^5.0.4-preview-rc",
     "@adonisjs/lucid": "^9.0.3",
     "@adonisjs/repl": "^1.0.0",
+    "@adonisjs/view": "^3.0.10",
     "geolib": "^3.3.1",
     "imagekit": "^3.1.1",
     "lodash": "^4.17.20",
@@ -29,6 +31,7 @@
     "phc-argon2": "^1.0.11",
     "proxy-addr": "^2.0.6",
     "reflect-metadata": "^0.1.13",
+    "socket.io": "^3.0.3",
     "source-map-support": "^0.5.19"
   }
 }
