--- a/.adonisrc.json
+++ b/.adonisrc.json
@@ -16,7 +16,11 @@
   "preloads": [
     "./start/routes",
     "./start/kernel",
-    "./start/events"
+    "./start/events",
+    {
+      "file": "./start/validationRules",
+      "environment": ["web"]
+    }
   ],
   "providers": [
     "./providers/AppProvider",
@@ -25,9 +29,7 @@
     "@adonisjs/auth",
     "@adonisjs/view"
   ],
-  "aceProviders": [
-    "@adonisjs/repl"
-  ],
+  "aceProviders": ["@adonisjs/repl"],
   "metaFiles": [
     {
       "pattern": "public/**",
