--- a/package.json
+++ b/package.json
@@ -5,14 +5,23 @@
   "scripts": {
     "build": "node ace build --production",
     "start": "node build/server.js",
-    "dev": "node ace serve --watch"
+    "dev": "node ace serve --watch",
+    "test": "node -r  @adonisjs/assembler/build/register japaFile.ts"
   },
   "devDependencies": {
     "@adonisjs/assembler": "^3.0.0",
+    "@types/axios": "^0.14.0",
+    "@types/jsdom": "^16.2.5",
     "@types/lodash": "^4.14.165",
     "@types/socket.io": "^2.1.11",
+    "@types/supertest": "^2.0.10",
     "adonis-preset-ts": "^1.1.0",
+    "execa": "^5.0.0",
+    "get-port": "^5.1.1",
+    "japa": "^3.1.1",
+    "jsdom": "^16.4.0",
     "pino-pretty": "^4.3.0",
+    "supertest": "^6.0.1",
     "typescript": "^4.1.2",
     "youch": "^2.1.1",
     "youch-terminal": "^1.0.1"
@@ -23,10 +32,12 @@
     "@adonisjs/lucid": "^9.0.3",
     "@adonisjs/repl": "^1.0.0",
     "@adonisjs/view": "^3.0.10",
+    "axios": "^0.21.0",
     "geolib": "^3.3.1",
     "imagekit": "^3.1.1",
     "lodash": "^4.17.20",
     "luxon": "^1.25.0",
+    "nanoid": "^3.1.20",
     "pg": "^8.5.1",
     "phc-argon2": "^1.0.11",
     "proxy-addr": "^2.0.6",
