--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@adonisjs/repl": "^1.0.0",
     "@adonisjs/view": "^3.0.10",
     "axios": "^0.21.0",
+    "firebase-admin": "^9.4.2",
     "geolib": "^3.3.1",
     "imagekit": "^3.1.1",
     "lodash": "^4.17.20",
